--- a/sjfnw/templates/admin/change_list.html
+++ b/sjfnw/templates/admin/change_list.html
@@ -1,37 +1,10 @@
-{# This is a copy of django 1.8.4's change_list.html template #}
-{# Modifications are indicated with comments #}
-{% extends "admin/base_site.html" %}
-{% load i18n admin_urls admin_static admin_list %}
+{# Overwrites part of django's change_list template #}
+{% extends "admin/change_list.html" %}
+{% load i18n admin_urls static admin_list %}
 
-{% block extrastyle %}
-  {{ block.super }}
-  <link rel="stylesheet" type="text/css" href="{% static "admin/css/changelists.css" %}" />
-  {% if cl.formset %}
-    <link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}" />
-  {% endif %}
-  {% if cl.formset or action_form %}
-    <script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
-  {% endif %}
-  {{ media.css }}
-  {% if not actions_on_top and not actions_on_bottom %}
-    <style>
-      #changelist table thead th:first-child {width: inherit}
-    </style>
-  {% endif %}
-{% endblock %}
-
+{# Filter toggling #}
 {% block extrahead %}
 {{ block.super }}
-{{ media.js }}
-{% if action_form %}{% if actions_on_top or actions_on_bottom %}
-<script type="text/javascript">
-(function($) {
-    $(document).ready(function($) {
-        $("tr input.action-select").actions();
-    });
-})(django.jQuery);
-</script>
-{% endif %}{% endif %}
 <script type="text/javascript">
 (function ($) {
   $(document).ready(function () {
@@ -44,20 +17,6 @@
 </script>
 {% endblock %}
 
-{% block bodyclass %}{{ block.super }} app-{{ opts.app_label }} model-{{ opts.model_name }} change-list{% endblock %}
-
-{% if not is_popup %}
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
-&rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
-</div>
-{% endblock %}
-{% endif %}
-
-{% block coltype %}flex{% endblock %}
-
 {% block content %}
   <div id="content-main">
     {# display help text if given #}
@@ -66,20 +25,7 @@
         {{ cl.model_admin.list_help_text|safe }}
       </div>
     {% endif %}
-    {% block object-tools %}
-      {% if has_add_permission %}
-        <ul class="object-tools">
-          {% block object-tools-items %}
-            <li>
-              {% url cl.opts|admin_urlname:'add' as add_url %}
-              <a href="{% add_preserved_filters add_url is_popup to_field %}" class="addlink">
-                {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
-              </a>
-            </li>
-          {% endblock %}
-        </ul>
-      {% endif %}
-    {% endblock %}
+    {% block object-tools %}{{ block.super }}{% endblock %}
     {% if cl.formset.errors %}
         <p class="errornote">
         {% if cl.formset.total_error_count == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
@@ -91,34 +37,28 @@
       {% if cl.model_admin.list_action_link %}
         <h3 class="extra-action">{{ cl.model_admin.list_action_link|safe }}</h3>
       {% endif %}
-      {% block search %}{% search_form cl %}{% endblock %}
-      {% block date_hierarchy %}{% date_hierarchy cl %}{% endblock %}
+      {% block search %}{{ block.super }}{% endblock %}
+      {% block date_hierarchy %}{{ block.super }}{% endblock %}
 
       {% block filters %}
         {% if cl.has_filters %}
           {# wrapper and toggle element for filters #}
-          <div id="changelist-wrapper">
-            <h2 id="filter-header">
-              {% trans 'Filter' %}<span class="toggle-collapsed"></span>
-            </h2>
             <div id="changelist-filter">
+              <h2>
+                {% trans 'Filter' %}<span class="toggle-collapsed"></span>
+              </h2>
               {% for spec in cl.filter_specs %}{% admin_list_filter cl spec %}{% endfor %}
-            </div>
           </div>
         {% endif %}
       {% endblock %}
 
-      <form id="changelist-form" action="" method="post"{% if cl.formset.is_multipart %} enctype="multipart/form-data"{% endif %} novalidate>{% csrf_token %}
+      <form id="changelist-form" method="post"{% if cl.formset.is_multipart %} enctype="multipart/form-data"{% endif %} novalidate>{% csrf_token %}
       {% if cl.formset %}
         <div>{{ cl.formset.management_form }}</div>
       {% endif %}
 
-      {% block result_list %}
-          {% if action_form and actions_on_top and cl.show_admin_actions %}{% admin_actions %}{% endif %}
-          {% result_list cl %}
-          {% if action_form and actions_on_bottom and cl.show_admin_actions %}{% admin_actions %}{% endif %}
-      {% endblock %}
-      {% block pagination %}{% pagination cl %}{% endblock %}
+      {% block result_list %}{{ block.super }}{% endblock %}
+      {% block pagination %}{{ block.super }}{% endblock %}
       </form>
     </div>
   </div>
