--- a/sjfnw/templates/admin/edit_inline/tabular.html
+++ b/sjfnw/templates/admin/edit_inline/tabular.html
@@ -1,27 +1,32 @@
-{# Modified copy of edit_inline/tabular.html from django 1.8.4. See comments #}
-{% load i18n admin_urls admin_static admin_modify %}
-<div class="inline-group" id="{{ inline_admin_formset.formset.prefix }}-group">
+{# Modified copy of django's edit_inline/tabular template #}
+{# It doesn't have any blocks so we have to copy the whole thing to make a few modifications #}
+{% load i18n admin_urls static admin_modify %}
+<div class="js-inline-admin-formset inline-group" id="{{ inline_admin_formset.formset.prefix }}-group"
+     data-inline-type="tabular"
+     data-inline-formset="{{ inline_admin_formset.inline_formset_data }}">
   <div class="tabular inline-related {% if forloop.last %}last-related{% endif %}">
 {{ inline_admin_formset.formset.management_form }}
-{# adding collapsed class & expand link, inline info #}
-<fieldset class="module{% if inline_admin_formset.opts.collapsed %} collapse collapsed{% endif %}">
-  <h2>{{ inline_admin_formset.opts.verbose_name_plural|capfirst }}
-    {% if inline_admin_formset.opts.collapsed %}({{ inline_admin_formset.formset.total_form_count }}){% endif %}
-    {% block inline-info %}{% endblock %}
-  </h2>
-  {{ inline_admin_formset.formset.non_form_errors }}
+<fieldset class="module {{ inline_admin_formset.classes }}">
+   <h2>{{ inline_admin_formset.opts.verbose_name_plural|capfirst }}</h2>
+   {% if inline_admin_formset.opts.help_text %}
+   <div class="help"><p>{{ inline_admin_formset.opts.help_text }}</p></div>
+   {% endif %}
+   {{ inline_admin_formset.formset.non_form_errors }}
    <table>
      <thead><tr>
+       <th class="original"></th>
      {% for field in inline_admin_formset.fields %}
        {% if not field.widget.is_hidden %}
-         <th{% if forloop.first %} colspan="2"{% endif %}{% if field.required %} class="required"{% endif %}>{{ field.label|capfirst }}
-         {% if field.help_text %}&nbsp;<img src="{% static "admin/img/icon-unknown.gif" %}" class="help help-tooltip" width="10" height="10" alt="({{ field.help_text|striptags }})" title="{{ field.help_text|striptags }}" />{% endif %}
+         <th{% if field.required %} class="required"{% endif %}>{{ field.label|capfirst }}
+         {% if field.help_text %}&nbsp;<img src="{% static "admin/img/icon-unknown.svg" %}" class="help help-tooltip" width="10" height="10" alt="({{ field.help_text|striptags }})" title="{{ field.help_text|striptags }}" />{% endif %}
          </th>
        {% endif %}
      {% endfor %}
+     {# Adding column for editing #}
      {% if inline_admin_formset.opts.show_change_link %}<th>Edit</th>{% endif %}
      {% if inline_admin_formset.formset.can_delete %}<th>{% trans "Delete?" %}</th>{% endif %}
      </tr></thead>
+
      <tbody>
      {% for inline_admin_form in inline_admin_formset %}
         {% if inline_admin_form.form.non_field_errors %}
@@ -30,10 +35,7 @@
         <tr class="form-row {% cycle "row1" "row2" %}{# removed has_original class #}{% if forloop.last %} empty-form{% endif %}"
              id="{{ inline_admin_formset.formset.prefix }}-{% if not forloop.last %}{{ forloop.counter0 }}{% else %}empty{% endif %}">
         <td class="original">
-          {# removed if check for inline_admin_form.original or inline_admin_form.show_url #}
-          {# removed <p> with inline_admin_form.original #}
-          {# Moved "Change" link below near delete #}
-          {# removed "show on site" link #}
+          {# Removed original/change link, "View on site" link #}
           {% if inline_admin_form.needs_explicit_pk_field %}{{ inline_admin_form.pk_field.field }}{% endif %}
           {{ inline_admin_form.fk_field.field }}
           {% spaceless %}
@@ -52,6 +54,7 @@
               {% if not field.field.is_hidden %}
               <td{% if field.field.name %} class="field-{{ field.field.name }}"{% endif %}>
               {% if field.is_readonly %}
+                  {# Added linebreaks filter, mainly for logs #}
                   {{ field.contents|linebreaks }}
               {% else %}
                   {{ field.field.errors.as_ul }}
@@ -62,8 +65,8 @@
             {% endfor %}
           {% endfor %}
         {% endfor %}
+        {# custom change link text #}
         {% if inline_admin_form.original and inline_admin_form.model_admin.show_change_link and inline_admin_form.model_admin.has_registered_model %}
-          {# custom change link text #}
           <td><p><a href="{% url inline_admin_form.model_admin.opts|admin_urlname:'change' inline_admin_form.original.pk|admin_urlquote %}">{{ inline_admin_form.model_admin.change_link_text|default:"Edit" }}</a></p></td>
         {% endif %}
         {% if inline_admin_formset.formset.can_delete %}
@@ -76,15 +79,3 @@
 </fieldset>
   </div>
 </div>
-
-<script type="text/javascript">
-
-(function($) {
-  $("#{{ inline_admin_formset.formset.prefix }}-group .tabular.inline-related tbody tr").tabularFormset({
-    prefix: "{{ inline_admin_formset.formset.prefix }}",
-    adminStaticPrefix: '{% static "admin/" %}',
-    addText: "{% blocktrans with inline_admin_formset.opts.verbose_name|capfirst as verbose_name %}Add another {{ verbose_name }}{% endblocktrans %}",
-    deleteText: "{% trans 'Remove' %}"
-  });
-})(django.jQuery);
-</script>
