tiny fixes, lint

--- a/sjfnw/templates/grants/widgets/contact_person.html
+++ b/sjfnw/templates/grants/widgets/contact_person.html
@@ -1,3 +1,4 @@
+{% load dict_key %}
 {% for subwidget in widget.subwidgets %}
   {% if forloop.counter == 2 %}
   <label for="{{ subwidget.attrs|key:'id' }}">Title</label>
