--- a/sjfnw/templates/grants/reporting.html
+++ b/sjfnw/templates/grants/reporting.html
@@ -41,7 +41,7 @@
 
 <div class="reporting-wrapper">
 
-  <a id="back-link" href="/admin/grants/">Back to admin site</a>
+  <!-- a id="back-link" href="{% url 'admin:app_list' app_label='grants' %}">Back to admin site</a -->
   <h1>Grant Database Reports</h1>
 
   <div class="report-type">Report type: 
