--- a/sjfnw/static/css/admin.css
+++ b/sjfnw/static/css/admin.css
@@ -1,62 +1,20 @@
-/** CUSTOM ADMIN STYLE OVERRIDES **/
+/*------------------------------ General ------------------------------------*/
 
-/* General
- *----------*/
+/* Modules - used across site */
 
-/* Make table section headers bigger */
-.module h2,
-.module caption,
-.inline-group h2 {
-  font-size: 13px;
-  background: #7CA0C7;
+/*------------------------------ Index ------------------------------------*/
+
+
+/* Reduce spacing between sidebar sections */
+#content-related .module {
+  margin-bottom: 0;
 }
 
-/* Index page
- *------------*/
 
-/* wrapper for custom sidebar + existing */
-.admin-sidebar {
-  float: right;
-  margin-right: -19em;
-  width: 18em;
-}
+/*--------------------------- Changelist ------------------------------------*/
 
-/* overspecify in order to override default style */
-.admin-sidebar #content-related {
-  float: none;
-  margin: 0;
-}
-
-/* Make custom sidebar links smaller */
-.admin-sidebar h3 {
-  font-size: 12px;
-}
-
-/* Changelist
- *------------*/
-
-.extra-action {
-  float: right;
-  z-index: 1;
-}
-
-#changelist-wrapper {
-  width: 200px;
-  float: right;
-  position: absolute;
-  right: 0;
-  background-color: #eeeeee;
-  border: 1px solid #aaaaaa;
-}
-
-#changelist #toolbar,
-#changelist .actions,
-#changelist .paginator,
-#changelist .results {
-  /* override the reserved space for default filter column */
-  margin-right: 0 !important;
-}
-
+/* Make filter collapsible to leave more room for results */
+/*
 #changelist.filtered {
   min-height: inherit;
 }
@@ -83,82 +41,4 @@
 .toggle-expanded::after {
   content: '\25bc';
 }
-
-/* Columns with nested tables */
-.nested-column td {
-  padding: 1px;
-  border: none;
-}
-
-.nested-column-4 td {
-  width: 25%;
-}
-
-/* Edit/change page
- *------------------*/
-
-/* used at top of some model pages (e.g. Org) */
-#top_help_text {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  color: #333;
-  width: 90%;
-  line-height: 1.2em;
-}
-
-/* make help text readable */
-p.help {
-  font-size: 12px !important;
-  font-weight: normal;
-}
-
-/* align help text better */
-form .aligned p.help {
-  padding-left: 0 !important;
-  margin-left: 0 !important;
-}
-
-/* Don't de-emphasize collapsed headers */
-fieldset.collapsed h2 {
-  background: #7CA0C7;
-  background-image: none !important;
-  color: #fff !important;
-}
-
-fieldset h2 a:link, fieldset h2 a:visited {
-  color: #ddc;
-}
-
-/* Model-specific
- *----------------*/
-
-/* user permissions box */
-#id_permissions {
-  height: 400px;
-}
-
-/* block the + button next to a dropdown in an inline */
-.grants-grantapplication .add-another,
-.grants-organization .add-another {
-  display: none;
-}
-
-.survey-choice {
-  display: block;
-}
-
-/* Custom page - merge_orgs.html
- *------------------------------*/
-
-.merge td {
-  border-left: 1px solid #eee;
-  font-size: 1em;
-}
-
-.merge-box {
-  max-width: 800px;
-}
-
-.big {
-  font-size: 1.25em;
-}
+*/
