save logs when reverting app to draft

--- a/sjfnw/templates/admin/grants/confirm_revert.html
+++ b/sjfnw/templates/admin/grants/confirm_revert.html
@@ -9,7 +9,7 @@
 <p>This will <strong>delete the application</strong> and replace it with a draft, allowing staff or the organization to make edits.</p>
 <ul>
   <li>Screening status and scoring bonuses will be reset to defaults.</li>
-  <li><strong>Any logs associated with this particular application will be deleted.</strong> Aisa is working on a fix for this. In the meantime, contact her if you need to change something in the application but don't want to revert and lose logs.</li>
+  <li>Any logs associated with this particular application will be kept and will still be associated with the organization. You can edit them individually to re-attach them to the application once it has been re-submitted.</li>
 </ul>
 
 <p>If you proceed, you will be redirected to the draft page once the conversion has finished, where you can extend the submission deadline if needed.</p>
