--- a/sjfnw/templates/grants/yer_form.html
+++ b/sjfnw/templates/grants/yer_form.html
@@ -122,7 +122,7 @@
 
   </form> {# end non-file form #}
 
-  <iframe class="upload" id="id_upload_frame" name="upload_frame" onload="fileUploads.iframeUpdated(this); console.log('iframe onload');"></iframe>
+  <iframe class="upload" id="id_upload_frame" name="upload_frame"></iframe>
 
   {% autoescape off %}
 
