--- a/sjfnw/templates/admin/grants/merge_orgs.html
+++ b/sjfnw/templates/admin/grants/merge_orgs.html
@@ -136,7 +136,7 @@
     {% endfor %}
   </tr>
 </table>
-<p><i>As well as any year-end reports and logs (notes entered by SJF staff)</p>
+<p><i>As well as any grantee reports and logs (notes entered by SJF staff)</p>
 <input class="big" type="submit" value="Merge" />
 </form>
 {% endblock %}
