--- a/sjfnw/static/css/grants.css
+++ b/sjfnw/static/css/grants.css
@@ -266,8 +266,9 @@ span.upload_button {
   border: 2px outset buttonface; /* IE */
 }
 
-form.files_form {
+.files_form {
   margin: 0;
+  display: inline-block;
 }
 
 iframe.upload {
@@ -421,9 +422,9 @@ img.print {
   display: block;
 }
 
-/*-------------------------- Year end report form ---------------------------*/
+/*-------------------------- Grantee report form ---------------------------*/
 
-.narrative_q { /* used in yer_form */
+.narrative_q {
   margin-top: 1.5em;
 }
 
@@ -442,12 +443,6 @@ img.print {
 
 .display label {
   font-weight: bold;
-}
-
-.yer-photo {
-  max-width: 500px;
-  margin: 1em auto;
-  display: block;
 }
 
 .file-uploads td {
