--- a/sjfnw/templates/admin/base_site.html
+++ b/sjfnw/templates/admin/base_site.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Django administration') }}</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Social Justice Fund NW Admin Site') }}</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
