--- a/sjfnw/templates/admin/index_custom.html
+++ b/sjfnw/templates/admin/index_custom.html
@@ -54,6 +54,7 @@
     <h3><a href="/fund" target="_blank">Project Central</a></h3>
     <h3><a href="/apply" target="_blank">Grant Application</a></h3>
     <h3><a href="/admin/grants/search" target="_blank">Run a grants report</a></h3>
+    <h3><a href="/admin/grants/grantee-report-statuses" target="_blank">Grantee report statuses</a></h3>
     <br>
   </div>
   <div class="module" id="report-module">
