--- a/sjfnw/templates/grants/includes/list_report_drafts.html
+++ b/sjfnw/templates/grants/includes/list_report_drafts.html
@@ -14,7 +14,7 @@
     </div>
   {% endif %}
   <div class="col col-1of8">
-    <button class="text-button" title="discard draft" onclick="confirmation('{{ draft.pk }}', '{{ draft.grant_cycle }}')">Discard</button>
+    <button class="text-button" title="discard draft" onclick="confirmation('report', '{{ draft.pk }}')">Discard</button>
   </div>
 </div>
 {% endwith %}
